--- a/style.css
+++ b/style.css
@@ -15,17 +15,41 @@ img {
 }
 
 #nav a:link {
-  color: green;
-  }
+  color: yellow;
+  display: block;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  padding: 4px;
+  font-family: helvetica, arial, sans-serif;
+}
 
 #nav a:visited {
-    color: pink;
-  }
+  color: pink;
+  display: block;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  padding: 4px;
+  font-family: helvetica, arial, sans-serif;
+}
 #nav a:hover {
   color: hotpink;
+  display: block;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  padding: 4px;
+  font-family: helvetica, arial, sans-serif;
 }
 #nav a:active {
-  color:limegreen;
+  color: green;
+  display: block;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  padding: 4px;
+  font-family: helvetica, arial, sans-serif;
 }
 
 #nav li {
@@ -39,16 +63,40 @@ img {
 
 #nav2 a:link {
   color: yellow;
-  }
+  display: block;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  padding: 4px;
+  font-family: helvetica, arial, sans-serif;
+}
 
 #nav2 a:visited {
-    color: pink;
+  color: pink;
+  display: block;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  padding: 4px;
+  font-family: helvetica, arial, sans-serif;
   }
 #nav2 a:hover {
   color: hotpink;
+  display: block;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  padding: 4px;
+  font-family: helvetica, arial, sans-serif;
 }
 #nav2 a:active {
-  color:limegreen;
+  color: green;
+  display: block;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  padding: 4px;
+  font-family: helvetica, arial, sans-serif;
 }
 #nav2 li {
   float: left;
