--- a/style.css
+++ b/style.css
@@ -69,52 +69,6 @@ font-family: 'PT Sans', helvetica, "Source Sans Pro", sans-serif;
   font-family: 'PT Sans', helvetica, "Source Sans Pro", sans-serif;
 }
 
-#nav2 a:visited {
-  color: #9D9254;
-  display: block;
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  padding: 4px;
-  font-family: 'PT Sans', helvetica, "Source Sans Pro", sans-serif;
-}
-
-#nav2 a:link {
-  color: #58E5EB;
-  display: block;
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  padding: 4px;
-  font-family: 'PT Sans', helvetica, "Source Sans Pro", sans-serif;
-  }
-#nav2 a:hover {
-  color: hotpink;
-  display: block;
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  padding: 4px;
-  font-family: 'PT Sans', helvetica, "Source Sans Pro", sans-serif;
-}
-#nav2 a:active {
-  color: #6B3158;
-  display: block;
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  padding: 4px;
-  font-family: 'PT Sans', helvetica, "Source Sans Pro", sans-serif;
-}
-#nav2 li {
-  float: left;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 25%;
-  font-family: 'PT Sans', helvetica, "Source Sans Pro", sans-serif;
-}
-
 h1, h2, h3, h4, h5, h6{
   font-family: 'PT Serif', 'Merriweather', Georgia, serif;
   font-weight: 400;
@@ -123,23 +77,7 @@ h1, h2, h3, h4, h5, h6{
 
 }
 
-#header{
-  font-family: 'PT Serif', 'Merriweather', Georgia, serif;
-  font-weight: bold;
-  color: orange;
-  padding-top: 10px;
-  font-size: 1.5rem
 
-
-}
-#header2{
-  font-family: 'PT Serif', 'Merriweather', Georgia, serif;
-  font-weight: bold;
-  color: orange;
-  padding-top: 10px;
-  font-size: 1.5rem
-
-}
 
 body{
 color: orange;
@@ -162,3 +100,11 @@ img {
   font-weight: lighter;
 
 }
+
+
+@media (min-width: 800px) {
+  .navigation {
+    flex-flow: row;
+    justify-content: flex-end;
+
+  }
