--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ img {
 
 }
 
-@media (min-width:500px){
+/*@media (min-width:500px){
 	.nav {
     flex-flow: row;
     justify-content: flex-end;
@@ -161,7 +161,7 @@ img {
 			margin-right: 10px;
 		}
 
-}
+}*/
 
 
 @media (min-width: 700px) {
