--- a/style.css
+++ b/style.css
@@ -41,10 +41,15 @@ padding-top: 15px;
 font-family: 'PT Sans', helvetica, "Source Sans Pro", sans-serif;
 font-size: 1rem;
 line-height: 1.35rem;
+max-width: 800px;
+}
+
+.hidden {
+	display: none;
 }
 
 img {
-  display: block;
+  display: none;
 }
 
  a:visited {
@@ -103,60 +108,18 @@ img {
 
 }
 
-/*@media (min-width:500px){
-	.nav {
-    flex-flow: row;
-    justify-content: flex-end;
-	}
-
-	.nav a {
-		border: none;
-		padding-top: 20px;
-	}
-	.main, .aside, .footer {
-	  flex: 1 100%;
-	  padding: 10px;
-		flex-flow: column;
-	}
-
-.wrapper {
-	height: 300px;
-	padding-left: 10px;
+@media query (min-width: 500px){
+	img, .caption {
+  display: block;
+}
+.hidden {
+	display: flex;
 }
 
-.main {
-	    flex: 3 0px;
-	    display: flex;
-			padding-left: 10px;
-	  }
 
-.aside-1 {
-	order: 1;
-	display: flex wrap;
 }
 
-.main {
-	order: 2;
-}
-
-.aside-2 {
-	order: 3;
-}
-
-.footer {
-	order: 4;
-}
-		img {
-		  border-style: none;
-		  padding-top: 15px;
-			width:50%;
-			margin-right: 10px;
-		}
-
-}*/
-
-
-@media (min-width: 700px) {
+@media query (min-width: 700px) {
   .nav {
     flex-flow: row wrap;
     justify-content: flex-end;
