--- a/style.css
+++ b/style.css
@@ -69,8 +69,6 @@ a:link {
 font-family: 'PT Sans', helvetica, "Source Sans Pro", sans-serif;
 }
 
-
-
 h1, h2, h3, h4, h5, h6{
   font-family: 'PT Serif', 'Merriweather', Georgia, serif;
   font-weight: 400;
@@ -81,7 +79,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 body{
-color: orange;
+	color: white;
   background-color:#0B686B;
   margin: auto;
   font-family: 'PT Sans', helvetica, "Source Sans Pro", sans-serif;
@@ -93,7 +91,7 @@ img {
 	width: 100%;
 }
 
-.container{
+.container {
   width: 95%;
   background-color: white;
   margin: 0 auto;
@@ -102,17 +100,20 @@ img {
 
 }
 
-@media query (min-width: 500px){
-
-
-
-
+.main {
+	display: none;
 }
 
-@media query (min-width: 700px) {
-  .nav {
-    flex-flow: row wrap;
-    justify-content: flex-end;
+@media screen and (min-width: 600px) {
+
+.main {
+		display: block;
+	}
+
+
+	.nav {
+		flex-flow: row wrap;
+		justify-content: flex-end;
 	}
 
 	.nav a {
@@ -121,36 +122,41 @@ img {
 
 	}
 	.nav a:hover {
-    background: white;
-  }
+		background: white;
+	}
 	.wrapper {
 		flex-flow: row;
 		flex-wrap: wrap;
 	}
 
-	.aside {
-		flex: 1 10%;
-	}
+}
 
-	.main {
-		flex: 2 30%;
-		margin-left: 1.5em;
-		margin-right: 1.5em;
-	}
+@media screen and (min-width: 900px) {
 
-	.footer {
-		flex: 1 auto;
-		padding-top: 50px;
+		.aside {
+			flex: 1 10%;
+		}
 
+		.main {
+			flex: 2 30%;
+			margin-left: 1.5em;
+			margin-right: 1.5em;
+		}
+		img {
+			width: 50%;
+			float: left;
+			margin-right: 1.5em;
+		}
+		.nav ul {
+		  display: flex;
+		  flex-flow: column;
+		  margin: 0;
+		}
+		.footer {
+			flex: 1 auto;
+			padding-top: 50px;
 
-	}
-
-	img {
-		width: 50%;
-		float: left;
-		margin-right: 1.5em;
-	}
-
+		}
   }
 
 
