got rid of visited color

--- a/style.css
+++ b/style.css
@@ -45,13 +45,13 @@ max-width: 800px;
 }
 
 
-
+/*
  a:visited {
   color: #9D9254;
 	color: #6B3158;
 
 font-family: 'PT Sans', helvetica, "Source Sans Pro", sans-serif;
-}
+}*/
 
 a:link {
   color: #58E5EB;
