added map and made responsive

--- a/style.css
+++ b/style.css
@@ -42,6 +42,20 @@ header h1 {
 nav ul {
     display: none;
 }
+.map-wrapper {
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+
+.map-wrapper iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
 
 @media screen and (min-width: 700px){
 
@@ -71,5 +85,12 @@ nav ul {
     nav {
         order: 2;
     }
+		.map-wrapper iframe{
+		    left:0;
+		    top:0;
+		    height:65%;
+		    width:65%;
+		    position:absolute;
+		}
 
 }
